--- a/site/css/global.css
+++ b/site/css/global.css
@@ -1,23 +1,26 @@
 @font-face {
-    font-family: 'Lilita One';
+    font-family: "Lilita One";
     src: local(),
-        url('../assets/fonts/LilitaOne-Regular.ttf')    
+        url(../assets/fonts/LilitaOne-Regular.ttf)
     ;
+    font-weight: bold;
 }
+
 
 :root {
     --primary_color: rgb(34, 40, 49);
     --secondary_color: rgb(49, 54, 63);
     --accent1: rgb(118, 171, 174);
-    --accent2: rgb(238, 238, 238);
+    --accent2: rgb(220, 220, 220);
 }
+
 
 body {
     background-color: var(--primary_color);
     color: var(--accent2);
 
-    font-family: "Lilita One";
-    font-weight: lighter;
+    font-family: 'Lilita One';
+    font-weight: 400;
     font-style: normal;
     font-size: 1.5rem;
 }
@@ -27,57 +30,56 @@ a:hover {
 }
 
 #main{
-
-    width: 75%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-
-    border-style: solid;
-    border-radius: 1%;
-
-    background-color: var(--secondary_color);
     text-align: center;
+
+    border-style: dotted;
     
+}   
+
+
+#games-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .game-capsule {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 45%;
-    height: 6.5cm;
+    width: 400px;
+    height: 610px;
 
     border-style: solid;
     border-radius: 1%;
 
-    padding: 10px;
+    margin: 0.4cm 0.3cm 0.4cm;
 }
 
 .game-capsule #details{
-    float: left;
-    width: 48%;
-    padding: 0px 10px 10px 10px;
+    height: fit-content;
 }
 
 .game-capsule img{
-    float: right;
-    width: 48%;
-
-    height: fit-content;
-    margin-top: auto;
-    margin-bottom: auto;
+    width: 80%;
+    padding-top: 10px;
 }
 
+
 #OneWWTM {
+    float: left;
     background-color: rgb(0, 0, 0);
-    color: white;
 }
 
 #FactoryMS {
-    background-color: #3057E1;
-    color: rgb(206,216,247);
+    float: left;
+    background-color: #3057E1;  
 }
 
+#SwanDMG {
+    float: left;
+    background-color: rgb(0, 0, 0);
+}
 
 .links-bar a {
     display: inline-block;
@@ -86,10 +88,11 @@ a:hover {
 }
 
 .links-bar a>img {
-    width: 32px;
+    width: 3.2rem;
+    padding: 0px 5px;
 }
 
 .links-bar a>img:hover {
-    width: 32px;
     filter: drop-shadow(0 0 var(--accent1)) opacity(0.8);
 }
+ 
