--- a/site/css/global.css
+++ b/site/css/global.css
@@ -16,7 +16,7 @@
 
 
 body {
-    background-color: var(--primary_color);
+    background-color: var(--secondary_color);
     color: var(--accent2);
 
     font-family: 'Lilita One';
@@ -30,6 +30,7 @@ a:hover {
 }
 
 #main{
+    background-color: var(--primary_color);
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -81,6 +82,10 @@ a:hover {
     background-color: rgb(0, 0, 0);
 }
 
+#footer {
+    padding: 8px
+}
+
 .links-bar a {
     display: inline-block;
     padding: 5px;
@@ -95,4 +100,9 @@ a:hover {
 .links-bar a>img:hover {
     filter: drop-shadow(0 0 var(--accent1)) opacity(0.8);
 }
- 
+
+@media (min-width: 1300px) {
+    #main {
+        width: 70%;
+    }
+}
