--- a/css/global.css
+++ b/css/global.css
@@ -37,7 +37,7 @@ a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 200%;
 }
 
 #main{
@@ -136,4 +136,13 @@ a:hover {
     #main {
         width: 70%;
     }
+}
+
+@keyframes slide {
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translate(-1920px); /* The image width */
+  }
 }
