--- a/css/global.css
+++ b/css/global.css
@@ -33,11 +33,12 @@ a:hover {
 #background-img {
     position: fixed;
     z-index: -10;
-    height: 100%;
+    height: 200%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 200%;
+    animation: slide 40s linear infinite;
 }
 
 #main{
