--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     width: 200%;
-    animation: slide 40s linear infinite;
+    animation: slide 60s linear infinite;
 }
 
 #main{
@@ -144,6 +144,6 @@ a:hover {
     transform: translate(0);
   }
   100% {
-    transform: translate(-1920px); /* The image width */
+    transform: translate(-100%); /* The image width */
   }
 }
